faster than py at least

--- a/2023/day5-go.ipynb
+++ b/2023/day5-go.ipynb
@@ -2,12 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 59,
-   "id": "dfa57f74",
+   "execution_count": 103,
+   "id": "747372c4",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-12-06T00:08:06Z",
-     "start_time": "2023-12-06T00:08:06.004Z"
+     "end_time": "2023-12-06T23:51:33Z",
+     "start_time": "2023-12-06T23:50:49.119Z"
     }
    },
    "outputs": [
@@ -15,27 +15,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[79 14 55 13]\n",
-      "[seed-to-soil map:\n",
-      "50 98 2\n",
-      "52 50 48 soil-to-fertilizer map:\n",
-      "0 15 37\n",
-      "37 52 2\n",
-      "39 0 15 fertilizer-to-water map:\n",
-      "49 53 8\n",
-      "0 11 42\n",
-      "42 0 7\n",
-      "57 7 4 water-to-light map:\n",
-      "88 18 7\n",
-      "18 25 70 light-to-temperature map:\n",
-      "45 77 23\n",
-      "81 45 19\n",
-      "68 64 13 temperature-to-humidity map:\n",
-      "0 69 1\n",
-      "1 0 69 humidity-to-location map:\n",
-      "60 56 37\n",
-      "56 93 4]\n",
-      "true\n"
+      "running routine 2102534948 to 5923540\n",
+      "running routine 2249227634 to 74967914\n",
+      "running routine 658370118 to 49359719\n",
+      "running routine 4055197159 to 59237418\n",
+      "running routine 314462259 to 268880047\n",
+      "running routine 3793791524 to 105394212\n",
+      "running routine 1514493331 to 295250933\n",
+      "running routine 2370414906 to 38444198\n",
+      "running routine 3291001718 to 85800943\n",
+      "running routine 828589016 to 654882197\n",
+      "7873084\n"
      ]
     }
    ],
@@ -44,10 +34,13 @@
     "    \"fmt\"\n",
     "    \"strconv\"\n",
     "    \"strings\"\n",
+    "    \"os\"\n",
+    "    \"regexp\"\n",
     ")\n",
     "\n",
     "func convert(numbers string) (result []int) {\n",
-    "    for _, e := range strings.Split(numbers, \" \") {\n",
+    "    re := regexp.MustCompile(\"\\\\s+\")\n",
+    "    for _, e := range re.Split(numbers, -1) {\n",
     "        if n, err := strconv.Atoi(e); err == nil {\n",
     "            result = append(result, n)\n",
     "        } else {\n",
@@ -57,93 +50,114 @@
     "    return\n",
     "}\n",
     "\n",
-    "func zip(a, b []int) ([]intTuple, error) {\n",
-    "\n",
-    "    if len(a) != len(b) {\n",
-    "        return nil, fmt.Errorf(\"zip: arguments must be of same length\")\n",
-    "    }\n",
-    "\n",
-    "    r := make([]intTuple, len(a), len(a))\n",
-    "\n",
-    "    for i, e := range a {\n",
-    "        r[i] = intTuple{e, b[i]}\n",
-    "    }\n",
-    "\n",
-    "    return r, nil\n",
-    "}\n",
-    "\n",
-    "\n",
-    "func parseMap(lines string) {\n",
-    "    \n",
+    "func newArange(r []int) (*arange) {\n",
+    "    return &arange{dst:r[0], src:r[1], spread:r[2]}\n",
     "}\n",
     "\n",
     "type arange struct {\n",
-    "    start int\n",
-    "    end int\n",
+    "    dst int\n",
+    "    src int\n",
+    "    spread int\n",
     "}\n",
     "\n",
-    "func (a *arange) has(i int) bool {\n",
-    "    return i >= a.start && i < a.end\n",
+    "type mapping struct {\n",
+    "    name string\n",
+    "    ranges []*arange\n",
+    "}\n",
+    "\n",
+    "func (m *mapping) follow(i int) int {\n",
+    "    for _, r := range m.ranges {\n",
+    "        if r.src <= i && i < (r.src + r.spread) {\n",
+    "            //fmt.Println(m.name, r, i, \" -- \", r.src <= i, i < (r.src + r.spread), \"as\", (r.dst + (i-r.src)))\n",
+    "            return (r.dst + (i-r.src))\n",
+    "        }\n",
+    "    }\n",
+    "    return i\n",
+    "}\n",
+    "\n",
+    "func newMapping(lines string) *mapping {\n",
+    "    var result = mapping{ranges: []*arange{}}\n",
+    "    for i, l := range strings.Split(lines, \"\\n\") {\n",
+    "        if(i == 0) {\n",
+    "            result.name = l\n",
+    "        } else {\n",
+    "            result.ranges = append(result.ranges, newArange(convert(l)))\n",
+    "        }\n",
+    "    }\n",
+    "    return &result\n",
+    "}\n",
+    "\n",
+    "func convert_seed(seed int, mappings []*mapping) int {\n",
+    "    s := seed\n",
+    "    for _, m := range mappings {\n",
+    "        s = m.follow(s)\n",
+    "    }\n",
+    "    return s\n",
     "}\n",
     "\n",
     "func main() {\n",
-    "    var input = `seeds: 79 14 55 13\n",
-    "\n",
-    "seed-to-soil map:\n",
-    "50 98 2\n",
-    "52 50 48\n",
-    "\n",
-    "soil-to-fertilizer map:\n",
-    "0 15 37\n",
-    "37 52 2\n",
-    "39 0 15\n",
-    "\n",
-    "fertilizer-to-water map:\n",
-    "49 53 8\n",
-    "0 11 42\n",
-    "42 0 7\n",
-    "57 7 4\n",
-    "\n",
-    "water-to-light map:\n",
-    "88 18 7\n",
-    "18 25 70\n",
-    "\n",
-    "light-to-temperature map:\n",
-    "45 77 23\n",
-    "81 45 19\n",
-    "68 64 13\n",
-    "\n",
-    "temperature-to-humidity map:\n",
-    "0 69 1\n",
-    "1 0 69\n",
-    "\n",
-    "humidity-to-location map:\n",
-    "60 56 37\n",
-    "56 93 4`;\n",
+    "    \n",
+    "    b, _ := os.ReadFile(\".day5-input.txt\")\n",
+    "    input := strings.TrimSpace(string(b))\n",
     "    \n",
     "    var parts = strings.Split(input, \"\\n\\n\");\n",
-    "    var seed_str, maps = parts[0], parts[1:]\n",
+    "    var seed_str, map_strs = parts[0], parts[1:]\n",
     "    seed_str = seed_str[7:]\n",
     "    \n",
     "    var seeds = convert(seed_str)\n",
     "    \n",
-    "    fmt.Println(seeds)\n",
-    "    fmt.Println(maps)\n",
     "    \n",
-    "    var r = arange{0,5}\n",
-    "    fmt.Println(r.has(4))\n",
+    "    var mappings = []*mapping{}\n",
+    "    for _, map_str := range map_strs {\n",
+    "        mappings = append(mappings, newMapping(map_str))\n",
+    "    }\n",
     "    \n",
-    "    /*\n",
-    "    for _, line := range strings.Split(input, \"\\n\\n\") {\n",
-    "        fmt.Println(line)\n",
-    "    }*/\n",
+    "    /* part1 commented out\n",
+    "    for _, s := range seeds {\n",
+    "        for _, m := range mappings {\n",
+    "            s = m.follow(s)\n",
+    "        }\n",
+    "        if s < lowest {\n",
+    "            lowest = s\n",
+    "        }\n",
+    "    }\n",
+    "    fmt.Println(lowest)\n",
+    "    */\n",
+    "    \n",
+    "    lowestch := make(chan int)\n",
+    "    \n",
+    "    for i:= 0; i < len(seeds); i += 2 {\n",
+    "        \n",
+    "        go func(seed_start int, seed_end int) {\n",
+    "            fmt.Println(\"running routine\", seed_start, \"to\", seed_end)\n",
+    "            var lowest = int(^uint(0) >> 1)\n",
+    "            for j := seed_start; j < seed_start+seed_end; j += 1 {\n",
+    "                s := convert_seed(j, mappings)\n",
+    "                if s < lowest {\n",
+    "                    lowest = s\n",
+    "                }\n",
+    "            }\n",
+    "            lowestch <- lowest\n",
+    "        }(seeds[i], seeds[i+1])\n",
+    "    }\n",
+    "    \n",
+    "    var lowest = int(^uint(0) >> 1)\n",
+    "    for i := 0; i < len(seeds)/2; i++ {\n",
+    "        res, _ := <-lowestch\n",
+    "        if res < lowest {\n",
+    "            lowest = res\n",
+    "        }\n",
+    "    }\n",
+    "    close(lowestch)\n",
+    "    \n",
+    "    fmt.Println(lowest)\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c0855237",
+   "id": "97fc1c72",
    "metadata": {},
    "outputs": [],
    "source": []
