--- a/2023/day8-py.ipynb
+++ b/2023/day8-py.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 14,
    "id": "6846b3dd-802c-47a2-8099-ccb015953b92",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 4,
    "id": "5ff2b38c-836a-4535-8494-9c6ecebd625b",
    "metadata": {},
    "outputs": [],
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 8,
    "id": "68e77f9d-7038-4acb-a5ee-6e91fc605271",
    "metadata": {},
    "outputs": [],
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 9,
    "id": "bb59ac2d-315b-4535-85c8-51f7891760b2",
    "metadata": {},
    "outputs": [
@@ -57,7 +57,7 @@
        "16343"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 15,
    "id": "4b7df7c9-520e-456b-b681-c13943e73f1e",
    "metadata": {},
    "outputs": [],
@@ -134,9 +134,12 @@
    "source": [
     "rs = {k:v for k,v in tree.items() if k.endswith('A')}\n",
     "count = 0\n",
+    "loop = 0\n",
     "\n",
     "def is_z(d):\n",
     "    return all(map(lambda x: x.endswith('Z'), d.keys()))\n",
+    "\n",
+    "\n",
     "while not is_z(rs):\n",
     "    #print(rs)\n",
     "    for c in command:\n",
@@ -145,16 +148,90 @@
     "        count += 1\n",
     "        if is_z(rs):\n",
     "            break\n",
+    "    loop += 1\n",
     "count"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "c857951e-ed30-49f7-819a-bf1225455fe9",
+   "execution_count": 57,
+   "id": "bbd59cde",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# well that didn't work"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "8a297d41",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from math import lcm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "id": "459bbdfc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "start ['JHA', 'NCA', 'MMA', 'AAA', 'TVA', 'DTA']\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[21883, 13019, 19667, 16343, 18559, 14681]"
+      ]
+     },
+     "execution_count": 94,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "loop_keys = [ k for k in tree if k.endswith('A') ]\n",
+    "print(f\"start {loop_keys}\")\n",
+    "times = []\n",
+    "for k in loop_keys:\n",
+    "\n",
+    "    x = 0\n",
+    "    for c in command*10000:\n",
+    "        k = tree[k][c]\n",
+    "        x += 1\n",
+    "        if k.endswith(\"Z\"):\n",
+    "            times.append(x)\n",
+    "            break\n",
+    "times"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "id": "002f3816",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "15299095336639"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lcm(*times)"
+   ]
   }
  ],
  "metadata": {
@@ -173,7 +250,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.9.15"
   }
  },
  "nbformat": 4,
