--- a/2023/day11-py.ipynb
+++ b/2023/day11-py.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "67f437dc",
    "metadata": {},
    "outputs": [],
@@ -32,95 +32,130 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "f0dac1ca",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np"
+    "import numpy as np\n",
+    "from scipy import ndimage"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "id": "ec18b1fc",
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "not enough values to unpack (expected 2, got 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[21], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m m \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39marray([ \u001b[38;5;28mlist\u001b[39m(x) \u001b[38;5;28;01mfor\u001b[39;00m x \u001b[38;5;129;01min\u001b[39;00m data\u001b[38;5;241m.\u001b[39msplitlines() ])\n\u001b[0;32m----> 2\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m y,x \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mzip\u001b[39m(\u001b[38;5;28mmap\u001b[39m(\u001b[38;5;28mrange\u001b[39m, m\u001b[38;5;241m.\u001b[39mshape)):\n\u001b[1;32m      3\u001b[0m     \u001b[38;5;28mprint\u001b[39m(y)\n\u001b[1;32m      4\u001b[0m m\u001b[38;5;241m.\u001b[39mshape\n",
-      "\u001b[0;31mValueError\u001b[0m: not enough values to unpack (expected 2, got 1)"
-     ]
+     "data": {
+      "text/plain": [
+       "array([[0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+       "       [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 2, 0, 0],\n",
+       "       [3, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+       "       [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+       "       [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+       "       [0, 0, 0, 0, 0, 0, 0, 0, 0, 4, 0, 0, 0],\n",
+       "       [0, 5, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+       "       [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+       "       [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 6],\n",
+       "       [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+       "       [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 7, 0, 0],\n",
+       "       [8, 0, 0, 0, 0, 0, 9, 0, 0, 0, 0, 0, 0]], dtype=int32)"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "m = np.array([ list(x) for x in data.splitlines() ])\n",
-    "for y,x in zip(map(range, m.shape)):\n",
-    "    print(y)\n",
-    "m.shape"
+    "for y, row in enumerate(m):\n",
+    "    if all(row == '.'):\n",
+    "        m = np.insert(m, y, '.', axis=0)\n",
+    "for x, col in enumerate(m.T):\n",
+    "    if all(col == '.'):\n",
+    "        m = np.insert(m, x, '.', axis=1)\n",
+    "\n",
+    "m = np.where(m == '#', 1, 0)\n",
+    "labeled, lcount = ndimage.label(m)\n",
+    "labeled"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "id": "00496d81",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "all(m[3] == '.')"
+    "from scipy.spatial.distance import cdist\n",
+    "\n",
+    "def feature_dist(input):\n",
+    "    \"\"\"\n",
+    "    Takes a labeled array as returned by scipy.ndimage.label and \n",
+    "    returns an intra-feature distance matrix.\n",
+    "    \"\"\"\n",
+    "    I, J = np.nonzero(input)\n",
+    "    labels = input[I,J]\n",
+    "    coords = np.column_stack((I,J))\n",
+    "\n",
+    "    sorter = np.argsort(labels)\n",
+    "    labels = labels[sorter]\n",
+    "    coords = coords[sorter]\n",
+    "\n",
+    "    sq_dists = cdist(coords, coords, 'sqeuclidean')\n",
+    "\n",
+    "    start_idx = np.flatnonzero(np.r_[1, np.diff(labels)])\n",
+    "    nonzero_vs_feat = np.minimum.reduceat(sq_dists, start_idx, axis=1)\n",
+    "    feat_vs_feat = np.minimum.reduceat(nonzero_vs_feat, start_idx, axis=0)\n",
+    "\n",
+    "    return np.sqrt(feat_vs_feat)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "95fa9463",
+   "execution_count": 22,
+   "id": "58a00fcb",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([['.', '.', '.', '#', '.', '.', '.', '.', '.', '.'],\n",
-       "       ['.', '.', '.', '.', '.', '.', '.', '#', '.', '.'],\n",
-       "       ['#', '.', '.', '.', '.', '.', '.', '.', '.', '.'],\n",
-       "       ['x', 'x', 'x', 'x', 'x', 'x', 'x', 'x', 'x', 'x'],\n",
-       "       ['.', '.', '.', '.', '.', '.', '.', '.', '.', '.'],\n",
-       "       ['.', '.', '.', '.', '.', '.', '#', '.', '.', '.'],\n",
-       "       ['.', '#', '.', '.', '.', '.', '.', '.', '.', '.'],\n",
-       "       ['.', '.', '.', '.', '.', '.', '.', '.', '.', '#'],\n",
-       "       ['.', '.', '.', '.', '.', '.', '.', '.', '.', '.'],\n",
-       "       ['.', '.', '.', '.', '.', '.', '.', '#', '.', '.'],\n",
-       "       ['#', '.', '.', '.', '#', '.', '.', '.', '.', '.']], dtype='<U1')"
+       "array([[ 0.        ,  6.08276253,  4.47213595,  7.07106781,  6.70820393,\n",
+       "        11.3137085 , 11.66190379, 11.70469991, 11.18033989],\n",
+       "       [ 6.08276253,  0.        , 10.04987562,  4.12310563, 10.29563014,\n",
+       "         7.28010989,  9.        , 14.14213562, 10.77032961],\n",
+       "       [ 4.47213595, 10.04987562,  0.        ,  9.48683298,  4.12310563,\n",
+       "        13.41640786, 12.80624847,  9.        , 10.81665383],\n",
+       "       [ 7.07106781,  4.12310563,  9.48683298,  0.        ,  8.06225775,\n",
+       "         4.24264069,  5.09901951, 10.81665383,  6.70820393],\n",
+       "       [ 6.70820393, 10.29563014,  4.12310563,  8.06225775,  0.        ,\n",
+       "        11.18033989,  9.8488578 ,  5.09901951,  7.07106781],\n",
+       "       [11.3137085 ,  7.28010989, 13.41640786,  4.24264069, 11.18033989,\n",
+       "         0.        ,  2.82842712, 12.36931688,  6.70820393],\n",
+       "       [11.66190379,  9.        , 12.80624847,  5.09901951,  9.8488578 ,\n",
+       "         2.82842712,  0.        , 10.04987562,  4.12310563],\n",
+       "       [11.70469991, 14.14213562,  9.        , 10.81665383,  5.09901951,\n",
+       "        12.36931688, 10.04987562,  0.        ,  6.        ],\n",
+       "       [11.18033989, 10.77032961, 10.81665383,  6.70820393,  7.07106781,\n",
+       "         6.70820393,  4.12310563,  6.        ,  0.        ]])"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "np.insert(m, 3, 'x', axis=0)"
+    "feature_dist(labeled)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "58a00fcb",
+   "id": "a984642f-35ea-478a-b644-4f0b9c6584d9",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -142,7 +177,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.15"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
