--- a/2023/day11-py.ipynb
+++ b/2023/day11-py.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 447,
    "id": "e3c1aa78",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 327,
    "id": "67f437dc",
    "metadata": {},
    "outputs": [],
@@ -32,133 +32,155 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 333,
    "id": "f0dac1ca",
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "from scipy import ndimage"
+    "from scipy import ndimage\n",
+    "%matplotlib inline \n",
+    "from matplotlib import pyplot as plt\n",
+    "from itertools import combinations\n",
+    "from scipy.spatial import distance"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 394,
    "id": "ec18b1fc",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0],\n",
-       "       [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 2, 0, 0],\n",
-       "       [3, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
-       "       [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
-       "       [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
-       "       [0, 0, 0, 0, 0, 0, 0, 0, 0, 4, 0, 0, 0],\n",
-       "       [0, 5, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
-       "       [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
-       "       [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 6],\n",
-       "       [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
-       "       [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 7, 0, 0],\n",
-       "       [8, 0, 0, 0, 0, 0, 9, 0, 0, 0, 0, 0, 0]], dtype=int32)"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
+    "'''\n",
+    "expansion_value = 1\n",
     "m = np.array([ list(x) for x in data.splitlines() ])\n",
+    "y_inserted = 1 \n",
     "for y, row in enumerate(m):\n",
     "    if all(row == '.'):\n",
-    "        m = np.insert(m, y, '.', axis=0)\n",
+    "        m = np.insert(m, [y+y_inserted]*expansion_value, ['.'], axis=0)\n",
+    "        y_inserted += expansion_value\n",
+    "        \n",
+    "x_inserted = 1\n",
     "for x, col in enumerate(m.T):\n",
     "    if all(col == '.'):\n",
-    "        m = np.insert(m, x, '.', axis=1)\n",
+    "        m = np.insert(m, [x+x_inserted]*expansion_value, ['.'], axis=1)\n",
+    "        x_inserted += expansion_value\n",
     "\n",
-    "m = np.where(m == '#', 1, 0)\n",
-    "labeled, lcount = ndimage.label(m)\n",
-    "labeled"
+    "nm = np.where(m == '#', 1, 0)\n",
+    "labeled, lcount = ndimage.label(nm)\n",
+    "assert len(np.c_[np.where(m == '#')]) == lcount, 'uh oh we grouped some stars?'\n",
+    "#labeled\n",
+    "'''"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "00496d81",
+   "execution_count": 448,
+   "id": "05e3aba6",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from scipy.spatial.distance import cdist\n",
+    "m = np.array([ list(x) for x in data.splitlines() ])\n",
     "\n",
-    "def feature_dist(input):\n",
-    "    \"\"\"\n",
-    "    Takes a labeled array as returned by scipy.ndimage.label and \n",
-    "    returns an intra-feature distance matrix.\n",
-    "    \"\"\"\n",
-    "    I, J = np.nonzero(input)\n",
-    "    labels = input[I,J]\n",
-    "    coords = np.column_stack((I,J))\n",
-    "\n",
-    "    sorter = np.argsort(labels)\n",
-    "    labels = labels[sorter]\n",
-    "    coords = coords[sorter]\n",
-    "\n",
-    "    sq_dists = cdist(coords, coords, 'sqeuclidean')\n",
-    "\n",
-    "    start_idx = np.flatnonzero(np.r_[1, np.diff(labels)])\n",
-    "    nonzero_vs_feat = np.minimum.reduceat(sq_dists, start_idx, axis=1)\n",
-    "    feat_vs_feat = np.minimum.reduceat(nonzero_vs_feat, start_idx, axis=0)\n",
-    "\n",
-    "    return np.sqrt(feat_vs_feat)"
+    "expandable_y = []\n",
+    "for y, row in enumerate(m):\n",
+    "    if all(row == '.'):\n",
+    "        expandable_y.append(y+1)\n",
+    "        \n",
+    "expandable_x = []\n",
+    "for x, col in enumerate(m.T):\n",
+    "    if all(col == '.'):\n",
+    "        expandable_x.append(x+1)\n",
+    "        \n",
+    "nm = np.where(m == '#', 1, 0)\n",
+    "labeled, lcount = ndimage.label(nm)\n",
+    "assert len(np.c_[np.where(m == '#')]) == lcount, 'uh oh we grouped some stars?'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "58a00fcb",
+   "execution_count": 449,
+   "id": "f1dd7e62",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[ 0.        ,  6.08276253,  4.47213595,  7.07106781,  6.70820393,\n",
-       "        11.3137085 , 11.66190379, 11.70469991, 11.18033989],\n",
-       "       [ 6.08276253,  0.        , 10.04987562,  4.12310563, 10.29563014,\n",
-       "         7.28010989,  9.        , 14.14213562, 10.77032961],\n",
-       "       [ 4.47213595, 10.04987562,  0.        ,  9.48683298,  4.12310563,\n",
-       "        13.41640786, 12.80624847,  9.        , 10.81665383],\n",
-       "       [ 7.07106781,  4.12310563,  9.48683298,  0.        ,  8.06225775,\n",
-       "         4.24264069,  5.09901951, 10.81665383,  6.70820393],\n",
-       "       [ 6.70820393, 10.29563014,  4.12310563,  8.06225775,  0.        ,\n",
-       "        11.18033989,  9.8488578 ,  5.09901951,  7.07106781],\n",
-       "       [11.3137085 ,  7.28010989, 13.41640786,  4.24264069, 11.18033989,\n",
-       "         0.        ,  2.82842712, 12.36931688,  6.70820393],\n",
-       "       [11.66190379,  9.        , 12.80624847,  5.09901951,  9.8488578 ,\n",
-       "         2.82842712,  0.        , 10.04987562,  4.12310563],\n",
-       "       [11.70469991, 14.14213562,  9.        , 10.81665383,  5.09901951,\n",
-       "        12.36931688, 10.04987562,  0.        ,  6.        ],\n",
-       "       [11.18033989, 10.77032961, 10.81665383,  6.70820393,  7.07106781,\n",
-       "         6.70820393,  4.12310563,  6.        ,  0.        ]])"
+       "[58, 70, 77, 94, 97, 110, 119]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 449,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "feature_dist(labeled)"
+    "expandable_y"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "a984642f-35ea-478a-b644-4f0b9c6584d9",
+   "execution_count": 450,
+   "id": "e74ad886",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[7, 51, 60, 68, 120]"
+      ]
+     },
+     "execution_count": 450,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "expandable_x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 452,
+   "id": "c6f602f9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "458191688761"
+      ]
+     },
+     "execution_count": 452,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def convert_expansion(pos, fac=2):\n",
+    "    fac = fac - 1\n",
+    "    y,x = pos\n",
+    "    ny, nx = tuple(pos)\n",
+    "    for ey in expandable_y:\n",
+    "        if y >= ey:\n",
+    "            ny += fac\n",
+    "    for ex in expandable_x:\n",
+    "        if x >= ex:\n",
+    "            nx += fac\n",
+    "    return (ny,nx)\n",
+    "\n",
+    "lsum = 0\n",
+    "for s, g in combinations(range(1, lcount+1), 2):\n",
+    "    start = np.c_[np.where(labeled == s)][0]\n",
+    "    goal = np.c_[np.where(labeled == g)][0]\n",
+    "    fac = 1000000\n",
+    "    start = convert_expansion(start, fac)\n",
+    "    goal = convert_expansion(goal, fac)\n",
+    "    #print(f\"{s}({start}) to {g}({goal})\")\n",
+    "    lsum += distance.cityblock(start, goal)\n",
+    "lsum"
+   ]
   }
  ],
  "metadata": {
@@ -177,7 +199,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.9.15"
   }
  },
  "nbformat": 4,
