fix: can start from half str len, to be faster

--- a/2025/day02.ipynb
+++ b/2025/day02.ipynb
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "571d96f0-749b-4749-b175-e1aeec8abd61",
    "metadata": {},
    "outputs": [
@@ -69,7 +69,7 @@
        "28858486244"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -78,7 +78,7 @@
     "from textwrap import wrap\n",
     "def is_repeating(num: int):\n",
     "    s = str(num)\n",
-    "    return any(len(set(wrap(s,i))) == 1 for i in range(len(s)-1,0,-1))\n",
+    "    return any(len(set(wrap(s,i))) == 1 for i in range(len(s)//2,0,-1))\n",
     "\n",
     "sum([i for (low,high) in products for i in range(low,high+1) if is_repeating(i)])"
    ]
